# hook-bash-redirect

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  hook-bash-redirect-helper.c  hook-bash-redirect.c
